--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="bg-main-3"></div>
       <div class="bg-main-4"></div>
       <p class="name">Kardkasem</p>
-      <p class="slogan ubuntu">I design app and make it work.</p>
+      <p class="slogan ubuntu">I design apps and make them work.</p>
     </div>
     <!--bio-->
     <div class="bio-wrapper">
@@ -92,27 +92,27 @@
           </li>
           <li>
             <h4>
-              <i class="fas fa-user-circle"></i> name : kardkasem saenyen
+              <i class="fas fa-user-circle"></i> Name : kardkasem saenyen
             </h4>
           </li>
           <li>
             <h4>
-              <i class="fas fa-address-book"></i> tel: <a href="tel:0414306479">0414306479</a>
+              <i class="fas fa-address-book"></i> Tel: <a href="tel:0414306479">0414306479</a>
             </h4>
           </li>
           <li>
             <h4>
-              <i class="fas fa-envelope"></i> email :<a href="mailto:mos311063@hotmail.com"> mos311063@hotmail.com</a>
+              <i class="fas fa-envelope"></i> Email :<a href="mailto:mos311063@hotmail.com"> mos311063@hotmail.com</a>
             </h4>
           </li>
           <li>
             <h4>
-              <i class="fab fa-github"></i> github : <a href="https://github.com/mos311063"> to my github</a>
+              <i class="fab fa-github"></i> Github : <a href="https://github.com/mos311063"> to my github</a>
             </h4>
           </li>
           <li>
             <h4>
-              <i class="fab fa-linkedin"></i> linkedin : <a
+              <i class="fab fa-linkedin"></i> Linkedin : <a
                 href="https://www.linkedin.com/in/kardkasem-saenyen-87b7ab187/"> to my linkedin </a>
             </h4>
           </li>
@@ -180,18 +180,18 @@
           <br />
           My name is Kardkasem Saenyen :) too long right ? then you can call
           me “Moss”. <br /><br />
-          I could be define as an amatuer web developer, a newbie coder,
-          another living that love building website as well as coding useful
-          tool to make life easier using amazing technology we have.
+          I could be described as an amatuer web developer, a newbie coder,
+          and I love building websites and coding useful
+          tools to make life easier for people using the amazing technology we have.
           <br /><br />
-          I do love creating thing, even though my priorities is to make it
-          work I also love and enjoy to make it look elegant for the user.
+          While I do love creating things, and my priority is to make it
+          work, I also love and enjoy to make the application elegant for the user.
           <br /><br />
-          I am also a fan of pretty coding and make it so it can be readable
+          I am also a fan of pretty coding and making the code readable
           and easy to maintain.
           <br /><br />
-          apart from my coding life I enjoy playing guitar, badminton, cooking
-          and travel around to new place.
+          Apart from my coding life I enjoy playing guitar, badminton, cooking
+          and traveling around to new places.
         </p>
         <div class="about-history quicksand">
           <span class="ubuntu">Education history</span>
@@ -226,16 +226,15 @@
             </li>
             <li>
               <h2>2019</h2>
-              Coderacademy Bootcamp Melbourne
+              Coder Academy Bootcamp Melbourne
             </li>
           </ul>
           <span class="ubuntu">Work history</span>
           <ul>
             <p>
-              I work part time job in
-              various place mostly in retail
-              field(kitchen hand, waiter,delivery), I currently dont have any
-              programming work experience relate yet.
+              I have worked part time jobs in
+              various places, mostly in the hospitality
+              field (kitchen hand, waiter, delivery).
             </p>
           </ul>
         </div>
@@ -260,10 +259,19 @@
           <div class="slides">
             <div id="slide-1">
               <p class="project-h2 ubuntu">
-                project 1
+                ZodiacMe
               </p>
-              <p class="project-p quicksand">this project detail</p>
-              <a href="" class="project-link">to Github <i class="fab fa-github"></i></a>
+              <p class="project-p quicksand">
+                " app that helps you learn about zodiac "</br></br>
+                ZodiacMe is my first ruby terminal app created as assignment for Coder Academy Melbourne
+                course.</br></br>
+                <strong> Function </strong>: Based on user date of birth inputs (DD/MM/YYYY), ZodiacMe will return user
+                personality traits
+                based on your Zodiac (Western Zodiac) and Chinese Horoscope. It will also suggest matching level pairing
+                with your partner Zodiac.
+              </p>
+              <a href="https://github.com/mos311063/terminal_app" class="project-link">to Github <i
+                  class="fab fa-github"></i></a>
             </div>
             <div id="slide-2">
               <p class="project-h2 ubuntu">project 2</p>
@@ -323,9 +331,9 @@
     <div class="footer-wrap">
       <div class="footer-container">
         <span><i class="fab fa-yelp"></i>follow me on</span>
-        <a href=https://github.com/mos311063> <i class="fab fa-github"></i>
+        <a href="https://github.com/mos311063"> <i class="fab fa-github"></i>
         </a>
-        <a href=https://www.linkedin.com/in/kardkasem-saenyen-87b7ab187/> <i class="fab fa-linkedin"></i>
+        <a href="https://www.linkedin.com/in/kardkasem-saenyen-87b7ab187/"> <i class="fab fa-linkedin"></i>
         </a>
       </div>
     </div>
